Fixed DesireResultsActvity